django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: django
