django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
spec:
  rules:
  - host: aswin.com  # Add your custom domain here
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-app
            port:
              number: 8000


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: django-ingress
# spec:
#   tls:
#   - hosts:
#     - aswin.com
#     secretName: django-tls-secret
#   rules:
#   - host: aswin.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: django-service
#             port:
#               number: 8000
